# RatsEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  main.cpp  vcpkg-configuration.json  vcpkg.json
engine/: CMakeLists.txt
engine/cmake/: utils.cmake
engine/cmake/configs/: config.h.in  private_config.h.in  private_config_macro.h.in
engine/include/engine/: config.h  core.h  eastl_config.h  engine.h
engine/include/engine/render/: render_api.h  render_manager.h  window_manager.h
engine/include/engine/utils/: events.h  log.h  uuid.h
engine/include/engine/utils/macro/: defer.h
engine/modules/: engine.cppm  window.cppm
engine/modules/utils/: log.cppm  uuid.cppm
engine/old/private/render/glfw/: window_manager_glfw_vulkan.cppm
engine/old/private/render/vulkan/: vulkan.cppm
engine/old/public/render/: render.cppm  window_manager.cppm
engine/old/public/utils/: uuid.cppm
engine/old/src/: engine.cpp
engine/old/src/render/: window_manager.cpp
engine/old/src/render/glfw/: window_manager_glfw_vulkan.cpp
engine/old/src/utils/: log.cpp
engine/private/: pch.h
engine/private/engine/render/glfw/: window_manager_glfw.h  window_manager_glfw_vulkan.h
engine/private/engine/render/vulkan/: core.h  render_manager_vulkan.h  swapchain.h  window_manager_vulkan.h
engine/private/engine/render/vulkan/builder/: device_builder.h  instance_builder.h
engine/private/render/: constructor.cppm
engine/private/render/glfw/: vulkan.cppm  window_manager.cppm  window_manager_glfw_vulkan.cppm
engine/private/render/vulkan/: render_manager.cppm  render_manager_vulkan.cppm
engine/private/render/window/glfw/: window_manager.cppm
engine/private/window/: constructor.cppm  contructor.cppm
engine/private/window/glfw/: window.cppm
engine/public/: config.cppm  core.cppm  engine.cppm  render.cppm  window.cppm
engine/public/render/: render.cppm  render_api.cppm  render_manager.cppm  window_manager.cppm
engine/public/utils/: uuid.cppm
engine/src/: engine.cpp  engine.cppm  engine_export.h  pch.h
engine/src/private/: engine.cpp  engine_export.h
engine/src/public/: engine.cppm
engine/src/render/: render.cpp  render_manager.cpp  render_manager_constructor.cpp  window_manager.cpp  window_manager_constructor.cpp  window_manager_default_constructor.cpp
engine/src/render/glfw/: constructor.cpp  vulkan.cpp  vulkan_default.cpp  window_manager.cpp  window_manager_glfw.cpp  window_manager_glfw_vulkan.cpp
engine/src/render/vulkan/: constructor.cpp  constructor_default.cpp  core.cpp  default.cpp  render_manager.cpp  render_manager_vulkan.cpp  swapchain.cpp  window_manager_vulkan.cpp
engine/src/render/vulkan/builder/: device_builder.cpp  instance_builder.cpp
engine/src/render/window/: window_manager.cpp
engine/src/render/window/glfw/: window_manager_glfw.cpp
engine/src/utils/: eastl_operator_new.cpp  events.cpp  log.cpp  log.cppm  utils.cppm  uuid.cpp  uuid.cppm
engine/src/window/: constructor.cpp  window.cpp
engine/src/window/glfw/: constructor.cpp  window.cpp
launcher/: main.cpp
